# moddy

./: Cargo.toml  README.md  architecture-simple.gv  architecture.gv
.github/: dependabot.yml
communicator_virtual/: Cargo.toml
communicator_virtual/src/: interactive.rs  lib.rs
logic_whackamole/: Cargo.toml
logic_whackamole/src/: lib.rs
moddy_base/: Cargo.toml
moddy_base/src/: lib.rs
src/: main.rs
