[package]
name = "moddy"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddy_base = { path = "moddy_base" }
communicator_virtual = { path = "communicator_virtual" }
logic_whackamole = { path = "logic_whackamole" }