[package]
name = "communicator_virtual"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddy_base = { path = "../moddy_base" }

[dependencies.cursive]
version = "0.11"
default-features = false
features = ["pancurses-backend"]